--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
         <h1>WOMAC Score Evaluation</h1>
         <form id="womacForm">
             <h2>ส่วนที่ 1: ความปวด</h2>
-            <label>1.1 ความปวดขณะพักอยู่กับที่:</label>
+            <label>1.1 ความปวด "ขณะพักอยู่กับที่":</label>
+            <input type="radio" name="pain1" value="0"> ไม่ปวด
+            <input type="radio" name="pain1" value="1"> ปวดน้อย
+            <input type="radio" name="pain1" value="2"> ปวดกลาง
+            <input type="radio" name="pain1" value="3"> ปวดมาก
+            <input type="radio" name="pain1" value="4"> ปวดที่สุด
+            <br>
+            <label>1.2 ความปวด "ขณะยืนลงน้ำหนัก":</label>
             <input type="radio" name="pain1" value="0"> ไม่ปวด
             <input type="radio" name="pain1" value="1"> ปวดน้อย
             <input type="radio" name="pain1" value="2"> ปวดกลาง
