--- a/index.html
+++ b/index.html
@@ -276,6 +276,17 @@
       </div>
     </div>
     
+      
+    <div class="question">
+      <p>ชื่อ-สกุลผู้ประเมิน</p>
+      <input type="text" name="full-name" id="full-name" placeholder="กรอกชื่อ-สกุล" required style="width:100%; padding:10px; border-radius:6px; border:1px solid #ccc;">
+    </div>
+
+    <div class="question">
+      <p>วันที่ประเมิน</p>
+      <input type="date" name="assessment-date" id="assessment-date" required style="width:100%; padding:10px; border-radius:6px; border:1px solid #ccc;">
+    </div>
+
       <button type="submit">คำนวณคะแนน</button>
     </form>
     <div id="result" aria-live="polite"></div>
