--- a/index.html
+++ b/index.html
@@ -292,5 +292,7 @@
     <div id="result" aria-live="polite"></div>
   </main>
   <script src="scripts.js"></script>
+  <div id="result"></div>  <!-- แสดงคะแนนรวม -->
+  <div id="severity-level"></div> <!-- แสดงระดับความรุนแรง -->
 </body>
 </html>
