--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <div class="question">
       <p>1.1 ความปวดขณะพักอยู่กับที่</p>
       <div class="options">
-        <label><input type="radio" name="pain-rest" value="0" required> ไม่ปวด (0)</label>
-<label><input type="radio" name="pain-rest" value="1" required> ปวดน้อย (1)</label>
-<label><input type="radio" name="pain-rest" value="2" required> ปวดกลาง (2)</label>
-<label><input type="radio" name="pain-rest" value="3" required> ปวดมาก (3)</label>
-<label><input type="radio" name="pain-rest" value="4" required> ปวดที่สุด (4)</label>
+        <label><input type="radio" id="pain-rest-0" name="pain-rest" value="0" required> ไม่ปวด (0)</label>
+<label><input type="radio" id="pain-rest-1" name="pain-rest" value="1" required> ปวดน้อย (1)</label>
+<label><input type="radio" id="pain-rest-2" name="pain-rest" value="2" required> ปวดกลาง (2)</label>
+<label><input type="radio" id="pain-rest-3" name="pain-rest" value="3" required> ปวดมาก (3)</label>
+<label><input type="radio" id="pain-rest-4" name="pain-rest" value="4" required> ปวดที่สุด (4)</label>
       </div>
     </div>
     
