--- a/index.html
+++ b/index.html
@@ -290,9 +290,8 @@
       <button type="submit">คำนวณคะแนน</button>
     </form>
     <div id="result" aria-live="polite"></div>
+    <div id="severity-level" aria-live="polite"></div>
   </main>
   <script src="scripts.js"></script>
-  <div id="result"></div>  <!-- แสดงคะแนนรวม -->
-  <div id="severity-level"></div> <!-- แสดงระดับความรุนแรง -->
 </body>
 </html>
