--- a/index.html
+++ b/index.html
@@ -275,7 +275,9 @@
 <label><input type="radio" name="difficulty-heavy-housework" value="4" required> ทำไม่ได้เลย (4)</label>
       </div>
     </div>
-    
+
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="styles.css" />
       
     <div class="question">
       <p>ชื่อ-สกุลผู้ประเมิน</p>
